--- a/ServerState/Views/Home/Index.cshtml
+++ b/ServerState/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using ServerState.Models
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -6,6 +7,15 @@
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+    @foreach (var resultSet in ((List<WebService>)ViewBag.Results))
+    {
+        @resultSet.Name
+        @resultSet.Address
+        @resultSet.Port
+        @resultSet.LastTestResult.ToString()
+        @resultSet.LastTestResultText
+    }
 </div>
 
 <div class="row">
