--- a/ServerState/Views/Home/Index.cshtml
+++ b/ServerState/Views/Home/Index.cshtml
@@ -8,14 +8,32 @@
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 
-    @foreach (var resultSet in ((List<WebService>)ViewBag.Results))
-    {
-        @resultSet.Name
-        @resultSet.Address
-        @resultSet.Port
-        @resultSet.LastTestResult.ToString()
-        @resultSet.LastTestResultText
-    }
+
+
+    <div class="container">
+        <div class="row">
+            @foreach (var resultSet in ((List<WebService>)ViewBag.Results))
+            {
+                <div class="item">
+                    <div class="well">
+                        @resultSet.Name<br />
+                        @resultSet.Address<br />
+                        @resultSet.Port<br />
+                        @if (resultSet.LastTestResult)
+                        {
+                            <img class="statusIcons" src="~/Content/Images/passicon.png" />
+                        }
+                        else
+                        {   
+                            <img class="statusIcons" src="~/Content/Images/failicon.png" />
+                        }
+                        @resultSet.LastTestResultText
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+    
 </div>
 
 <div class="row">
